--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: var(--color-bg);
+  /* background: var(--color-bg); */
 }
 
 html::-webkit-scrollbar {
@@ -22,47 +22,9 @@ html::-webkit-scrollbar-track {
   height: 20px;
 }
 
-
 a {
   color: unset;
   text-decoration: none;
-}
-
-
-.gradient__bg {
-  background: -moz-radial-gradient(
-    circle at 3% 25%,
-    rgb(2, 66, 134) 0%,
-    rgba(4, 12, 24, 1) 25%
-  );
-
-  /* safari 5.1+,chrome 10+ */
-  background: -webkit-radial-gradient(
-    circle at 3% 25%,
-    rgba(0, 40, 83, 1) 0%,
-    rgba(4, 12, 24, 1) 25%
-  );
-
-  /* opera 11.10+ */
-  background: -o-radial-gradient(
-    circle at 3% 25%,
-    rgba(0, 40, 83, 1) 0%,
-    rgba(4, 12, 24, 1) 25%
-  );
-
-  /* ie 10+ */
-  background: -ms-radial-gradient(
-    circle at 3% 25%,
-    rgba(0, 40, 83, 1) 0%,
-    rgba(4, 12, 24, 1) 25%
-  );
-
-  /* global 92%+ browsers support */
-  background: radial-gradient(
-    circle at 3% 25%,
-    rgba(0, 40, 83, 1) 0%,
-    rgba(4, 12, 24, 1) 25%
-  );
 }
 
 .gradient__text {
@@ -107,8 +69,6 @@ a {
     transform: scale(1);
   }
 }
-
-
 
 @media screen and (max-width: 700px) {
   .section__padding {
